# elo

./: .gitignore  Cargo.toml  DESIGNDOCS.md  IDEAS.md  LICENSE  README.md  a.diff  a.ll  a.out  build.rs  l.py  linesofelo.py  out  test
compiler/: README.txt
compiler/elo-ast/: Cargo.toml  README.txt
compiler/elo-ast/src/: ast.rs
compiler/elo-codegen/: Cargo.toml  README.txt
compiler/elo-codegen/src/: c.rs  generator.rs  lib.rs  tests.rs
compiler/elo-error/: Cargo.toml  README.txt
compiler/elo-error/src/: error.rs  lib.rs  parseerror.rs  semerror.rs  tests.rs  (+1 more)
compiler/elo-ir/: Cargo.toml  README.txt
compiler/elo-lexer/: Cargo.toml  README.txt
compiler/elo-parser/: Cargo.toml  README.txt
compiler/elo-validation/: Cargo.toml  README.txt
compiler/elo-validation/src/: lib.rs  namespace.rs  semcheck.rs  tests.rs  typecheck.rs  validation.rs
components/elo-ast/: Cargo.toml
components/elo-codegen/: Cargo.toml
components/elo-codegen/src/: generator.rs  tests.rs
components/elo-error/: Cargo.toml  README.txt
components/elo-ir/: Cargo.toml  README.txt
components/elo-lexer/: Cargo.toml
components/elo-parser/: Cargo.toml  README.txt
components/elo-parser/src/: ast.rs  main.rs  node.rs  parser.rs  tests.rs
components/elo-validation/: Cargo.toml
components/elo-validation/src/: lib.rs  namespace.rs  tests.rs  validation.rs
components/oxido-error/: Cargo.toml  README.txt
components/oxido-ir/: Cargo.toml  README.md  README.txt
components/oxido-lex/: Cargo.toml
components/oxido-lexer/: Cargo.toml  README.txt
components/oxido-parser/: Cargo.toml  README.txt
docs/: deisgn.md  design.md  grammar.md
docs/design/: README.md  amm.md  basic.md  introduction.md  patmatching.md  philosophy.md  philosphy.md  typing.md
examples/: cat.elo  fib.elo  gol.elo  hello.elo  raylib.elo  vector.elo
examples/tests/: 00-hello-world.elo  01-fibonacci.elo  20-unexpected-token.elo  21-invalid-character-literal.elo  22-expected-statement.elo  23-type-mismatch.elo  24-invalid-tuple-member.elo  25-invalid-expression-assign-to-immediate.elo  26-assign-immutable.elo  27-unresolved-name.elo  28-unmatched-arguments-too-many.elo  29-unmatched-arguments-too-few.elo  30-unresolved-field.elo  31-return-value-on-void-function.elo  32-no-return.elo  33-mismatched-return-type.elo  34-index-non-indexable.elo  35-non-aggregate-field-access.elo  36-non-tuple-member-access.elo  37-variable-redefinition.elo  38-misplaced-return.elo  39-unknown-enum-variant.elo  40-call-non-function.elo  41-invalid-cast.elo  42-invalid-main-signature.elo
rt/: .gitignore  README.md  nob.c
rt/include/: blueprint.h  builtins.h  list.h  mem.h  panic.h  prelude.h  print.h  slice.h  str.h  typing.h
rt/src/: builtins.c  list.c  main.c  mem.c  panic.c  print.c  str.c
src/: cli.rs  main.rs  tcc.rs  tests.rs
(+67 files in other folders)
