[workspace]
members = [".", "compiler/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "elo"
build = "build.rs"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
elo-lexer = { path = "compiler/elo-lexer" }
elo-parser = { path = "compiler/elo-parser" }
elo-validation = { path = "compiler/elo-validation" }
elo-codegen = { path = "compiler/elo-codegen" }
elo-error = { path = "compiler/elo-error" }
elo-ir = { path = "compiler/elo-ir" }
elo-ast = { path = "compiler/elo-ast" }
