[package]
name = "elo-validation"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elo-error = { path = "../elo-error" }
elo-ir = { path = "../elo-ir" }
elo-lexer = { path = "../elo-lexer" }
elo-parser = { path = "../elo-parser" }
