[package]
name = "elo-parser"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elo-lexer = { path = "../elo-lexer" }
elo-error = { path = "../elo-error" }
elo-ast = { path = "../elo-ast" }
