[package]
name = "elo-validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elo-error = { path = "../elo-error" }
elo-ast = { path = "../elo-ast" }
elo-ir = { path = "../elo-ir" }
elo-lexer = { path = "../elo-lexer" }
elo-parser = { path = "../elo-parser" }